SC-25 fixes etc

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -122,9 +122,15 @@
             "title_rm": "Дашборд РМ",
             "empty": "Пустой список проектов",
             "counters": {
-                "projects": "Всего действующих проектов",
-                "requests": "Всего выполненных запросов",
-                "work": "Всего запросов в работе"
+                "first_pm": "Всего действующих проектов",
+                "first_pfm": "Всего действующих проектов",
+                "first_rm": "Всего запросов в работе",
+                "second_pm": "Всего выполненных запросов",
+                "second_pfm": "Всего выполненных запросов",
+                "second_rm": "Всего людей требуется",
+                "third_pm": "Всего запросов в работе",
+                "third_pfm": "Всего запросов в работе",
+                "third_rm": "Всего предложено людей"
             },
             "table": {
                 "head": {
@@ -148,6 +154,17 @@
                     "customer": "Заказчик",
                     "project": "Проект",
                     "rpp": "РПП"
+                }
+            },
+            "table-requirement": {
+                "head": {
+                    "req": "Требование",
+                    "time": "Сроки запроса",
+                    "status": "Статус",
+                    "total": "Всего людей требуется",
+                    "offer": "Всего людей предложено",
+                    "pm": "РП",
+                    "request": "Проектный запрос"
                 }
             }
         },
