SC-25 fixes etc

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -118,18 +118,22 @@
         "dashboard": {
             "title_default": "Дашборд",
             "title_pfm": "Дашборд РПП",
+            "title_admin": "Дашборд РПП",
             "title_pm": "Дашборд РП",
             "title_rm": "Дашборд РМ",
             "empty": "Пустой список проектов",
             "counters": {
                 "first_pm": "Всего действующих проектов",
                 "first_pfm": "Всего действующих проектов",
+                "first_admin": "Всего действующих проектов",
                 "first_rm": "Всего запросов в работе",
                 "second_pm": "Всего выполненных запросов",
                 "second_pfm": "Всего выполненных запросов",
+                "second_admin": "Всего выполненных запросов",
                 "second_rm": "Всего людей требуется",
                 "third_pm": "Всего запросов в работе",
                 "third_pfm": "Всего запросов в работе",
+                "third_admin": "Всего запросов в работе",
                 "third_rm": "Всего предложено людей"
             },
             "table": {
