--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -284,6 +284,13 @@
             "hello": "SkillCloud"
         },
         "organizations": {
+            "confirm-modal": {
+                "header": "Точно удалить?",
+                "text": "Будет удалена организация: {{name}}",
+                "empty-name": "Имя организации не указано",
+                "cancel": "Отмена",
+                "delete": "Удалить"
+            },
             "main": {
                 "title": "Организации",
                 "list": {
@@ -359,6 +366,7 @@
             },
             "edit-modal": {
                 "header":"Основные данные",
+                "required-error": "Это обьязательное поле",
                 "form": {
                     "request": {
                         "label": "Проектный запрос",
@@ -413,6 +421,10 @@
                 "cards-count_4": "{{count}} пунктов",
                 "cards-count_5": "{{count}} пунктов",
                 "modal" : {
+                    "project": {
+                        "title": "Проект",
+                        "placeholder": "Выберите проект для добавления карточки"
+                    },
                     "cards-template": "Шаблон карточек",
                     "title_create-by-template": "Создать по шаблону",
                     "title_edit": "Редактирование карточки прав и доступа",
@@ -870,7 +882,8 @@
                 "title_add": "Добавить карточки доступа",
                 "cancel": "Отмена",
                 "submit": "Сохранить",
-                "date": "Дата выдачи"
+                "date": "Дата выдачи",
+                "empty": "У компании ещё нет ни одной карточки доступа"
             },
             "modal-rating": {
                 "title": "Оцените специалиста",
