SC-25 system users permissions and dashboard

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -150,7 +150,8 @@
                     "time": "Сроки",
                     "rp": "Ответственный РП",
                     "requests": "Всего проектных запросов",
-                    "done": "Выполненных запросов"
+                    "done": "Выполненных запросов",
+                    "in_progress": "Запросов в работе"
                 },
                 "values": {
                     "empty": "Не указано"
