--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -118,10 +118,11 @@
         "dashboard": {
             "title_default": "Дашборд",
             "title_pfm": "Дашборд РПП",
-            "title_admin": "Дашборд РПП",
+            "title_admin": "Дашборд",
             "title_pm": "Дашборд РП",
             "title_rm": "Дашборд РМ",
             "empty": "В дашборде ничего нет",
+            "empty-admin": "Дашборд для системного администратора в роадмапе на следующие релизы",
             "counters": {
                 "first_pm": "Всего действующих проектов",
                 "first_pfm": "Всего действующих проектов",
@@ -795,6 +796,7 @@
                 },
                 "access": {
                     "title": "Доступность",
+                    "required-error": "Это обязательное поле",
                     "form": {
                         "start": "Начиная с",
                         "end": "Заканчивая",
@@ -1104,7 +1106,7 @@
                         "value": {
                             "draft": "Черновик",
                             "in_progress": "В работе",
-                            "done": "Завершён",
+                            "done": "Успешно завершён",
                             "closed": "Закрыт"
                         }
                     },
@@ -1142,7 +1144,7 @@
                         "value": {
                             "draft": "Черновик",
                             "in_progress": "В работе",
-                            "done": "Завершён",
+                            "done": "Успешно завершён",
                             "closed": "Закрыт"
                         }
                     }
@@ -1170,7 +1172,7 @@
                         "value": {
                             "draft": "Черновик",
                             "in_progress": "В работе",
-                            "done": "Завершён",
+                            "done": "Успешно завершён",
                             "closed": "Закрыт"
                         }
                     },
