SC-25 organizations fields

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -299,10 +299,17 @@
                     "empty": "Поиск не дал результатов.",
                     "customer": "Заказчик",
                     "contractor": "Исполнитель",
+                    "partner": "Партнёр",
                     "description": {
                         "title": "Описание компании",
                         "empty": "Описание не указано"
-                    }
+                    },
+                    "contact-person": {
+                        "title": "Контактное лицо",
+                        "empty": "Контактное лицо не указано"
+                    },
+                    "phone-empty": "Телефон не указан",
+                    "email-empty": "E-mail не указан"
                 },
                 "controls": {
                     "edit": "Редактировать",
@@ -322,6 +329,9 @@
                         },
                         "contractor": {
                             "label": "Исполнитель"
+                        },
+                        "partner": {
+                            "label": "Партнёр"
                         }
                     },
                     "buttons": {
@@ -448,13 +458,16 @@
             "create": {
                 "header": "Новая организация",
                 "required-error": "Это обязательное поле",
-                "name": {
-                    "label": "Название организации",
-                    "placeholder": "Введите название новой организации"
-                },
+                "name": "Краткое наименование организации",
+                "legal-name": "Юридическое наименование организации",
+                "general-manager": "Генеральный директор",
+                "contact-person": "Контактное лицо",
+                "contact-mail": "Контактный e-mail",
+                "contact-phone": "Контактный телефон",
                 "description": "Описание",
                 "customer": "Организация-заказчик",
                 "contractor": "Организация-исполнитель",
+                "partner": "Организация-партнёр",
                 "submit": "Создать организацию"
             },
             "edit-modal": {
