--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -23,7 +23,8 @@
                 },
                 "dropdown": {
                     "logout": "Выйти из аккаунта",
-                    "dashboard": "Дашборд"
+                    "dashboard": "Дашборд",
+                    "dictionary": "Справочники"
                 }
             }
         },
