SC-25 dictionary and filters

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -380,7 +380,8 @@
                             "label": "Заказчик"
                         },
                         "period": {
-                            "label": "Период"
+                            "label-start": "Дата начала",
+                            "label-end": "Дата окончания"
                         },
                         "industry-sector": {
                             "label": "Отрасль"
